# trivial-dashboard

./: CMakeLists.txt  README.md  buildroot.toolchain.cmake
cmake/Modules/: FindQTermWidget.cmake
src/: executor.cpp  executor.h  frame.cpp  frame.h  main.cpp  state.cpp  state.h  util.h
src/backend/: aggregator.cpp  aggregator.h  executor.cpp  executor.h  session.cpp  session.h
src/widgets/: cpu.cpp  cpu.h  legend.cpp  legend.h  network.cpp  network.h  sshterm.cpp  sshterm.h
